--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build:beta": "pnpm -s bundle --env=beta --node-env=production",
     "build:pr": "pnpm -s bundle --env=pr --node-env=production",
     "build:dev": "pnpm -s bundle --env=dev",
-    "i18n": "i18next-scanner --config ./i18next-scanner.config.cjs",
+    "i18n": "i18next",
     "start": "pnpm run --stream '/^(watch:i18n|devserver)$/'",
     "devserver": "nodemon --delay 2 --watch config/webpack.ts --watch config/feature-flags.ts --watch config/content-security-policy.ts --watch pnpm-lock.yaml -e ts,js,json,lock --exec \"pnpm install --frozen-lockfile --prefer-offline && webpack serve --config ./config/webpack.ts --env=dev || pnpm touch\"",
     "touch": "node -e \"require('fs').utimes('config/webpack.ts', new Date(), new Date(), () => {})\"",
@@ -143,7 +143,6 @@
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "husky": "^9.1.7",
-    "i18next-scanner": "^4.6.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
@@ -217,6 +216,7 @@
     "fast-equals": "^5.2.2",
     "i18next": "^25.3.2",
     "i18next-http-backend": "^3.0.2",
+    "i18next-parser": "^9.3.0",
     "immer": "^10.1.1",
     "memoize-one": "^6.0.0",
     "motion": "^12.23.5",
