--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build:beta": "pnpm -s bundle --env=beta --node-env=production",
     "build:pr": "pnpm -s bundle --env=pr --node-env=production",
     "build:dev": "pnpm -s bundle --env=dev",
-    "i18n": "i18next",
+    "i18n": "i18next --config i18next-parser.config.cjs",
     "start": "pnpm run --stream '/^(watch:i18n|devserver)$/'",
     "devserver": "nodemon --delay 2 --watch config/webpack.ts --watch config/feature-flags.ts --watch config/content-security-policy.ts --watch pnpm-lock.yaml -e ts,js,json,lock --exec \"pnpm install --frozen-lockfile --prefer-offline && webpack serve --config ./config/webpack.ts --env=dev || pnpm touch\"",
     "touch": "node -e \"require('fs').utimes('config/webpack.ts', new Date(), new Date(), () => {})\"",
